--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -75,6 +75,9 @@
 }
 
 @media (max-width: 976px) {
+  .description_block{
+    text-align: center;
+  }
   .navbar-brand {
     display: none;
   }
@@ -84,6 +87,9 @@
 }
 
 @media (min-width: 768px) {
+  .product_card{
+    margin-top: 1rem;
+  }
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
