--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -83,7 +83,7 @@
     text-align: center;
   }
   .navbar-brand {
-    display: none;
+    text-align: center;
   }
   .topbar {
     display: none;
