--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -83,7 +83,10 @@
 @media (max-width: 976px) {
 
   .admin_nav{
-    min-height: 56px;
+    min-height: 56px;    
+  }
+
+  .navbaradmin{
     margin-left: 10px;
   }
   .description_block{
@@ -112,9 +115,9 @@
 
 @media (min-width: 768px) {
   .product_card{
-    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
   }
-  
+
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
